Closed Bug 614867 Opened 15 years ago Closed 15 years ago

Fix WebGL FBOs (pass framebuffer-object-attachment.html)

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bjacob, Assigned: bjacob)

Details

Attachments

(1 file)

Attached patch FBO changesSplinter Review
This patch makes us pass framebuffer-object-attachment.html. The problem was that we were generating errors on mismatched FBO attachments (e.g. attaching a depth buffer to stencil attachment point), whereas the specs wanted us to only generate a framebuffer error on subsequent CheckFramebufferStatus / draw-calls. Unfortunately, this required rather deep changes to be fool-proof. On a positive note, the new code seems more robust and natural to me.
Attachment #493301 - Flags: review?(vladimir)
Comment on attachment 493301 [details] [diff] [review] FBO changes Looks good; I wonder if it's worth caching the bad attachments check so that it's not hit on every draw call? Probably no need unless it becomes an issue.
Attachment #493301 - Flags: review?(vladimir) → review+
I was wondering the same; indeed, let's wait until draw-functions show up in profiles.
Attachment #493301 - Flags: approval2.0+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Assignee: nobody → bjacob
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: