Bug 614867 - Fix WebGL FBOs (pass framebuffer-object-attachment.html) - r=vlad